--- a/personalwebsite/style.css
+++ b/personalwebsite/style.css
@@ -20,6 +20,14 @@ footer{
 }
 button{
   margin: 0 auto;
+  background-color: #BDCDD7;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
 }
 h3{
   color: #558B66;
@@ -36,6 +44,10 @@ a{
 .nav-item{
     color: #0C1824;
 }
+.fab fa-twitter-square{
+  font-size: 4em;
+}
+/*Media Queries*/
 @media only screen and (min-width: 1000px) and (max-width: 1200px) {
  p {
    font-size: 18px;
