--- a/personalwebsite/style.css
+++ b/personalwebsite/style.css
@@ -3,7 +3,8 @@ html{
   }
 .header{
   width: 100%;
-  max-width: 1100px;
+  max-width: 1400px;
+  padding-bottom: 20px;
 }
 footer{
   text-align: center;
@@ -31,6 +32,7 @@ button{
 }
 h3{
   color: #558B66;
+  text-decoration: underline;
 }
 body{
   font-family: 'Nunito Sans', sans-serif;
@@ -41,12 +43,38 @@ body{
 a{
   color: #0C1824;
 }
-.nav-item{
-    color: #0C1824;
+.navbar-light .navbar-nav .nav-link {
+color: #0C1824;
 }
 .fab fa-twitter-square{
   font-size: 4em;
 }
+/* Style inputs with type="text", select elements and textareas */
+input[type=text], select, textarea {
+  width: 100%; /* Full width */
+  padding: 12px; /* Some padding */
+  border: 1px solid #ccc; /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 6px; /* Add a top margin */
+  margin-bottom: 16px; /* Bottom margin */
+  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+  background-color: #BDCDD7;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+/* When moving the mouse over the submit button, add a darker green color */
+input[type=submit]:hover {
+  background-color: #BDCDD7;
+}
+
 /*Media Queries*/
 @media only screen and (min-width: 1000px) and (max-width: 1200px) {
  p {
