--- a/personalwebsite/style.css
+++ b/personalwebsite/style.css
@@ -47,42 +47,17 @@ a{
 color: #0C1824;
 }
 .fab fa-twitter-square{
-  font-size: 4em;
+  font-size: 6em;
 }
-/* Style inputs with type="text", select elements and textareas */
-input[type=text], select, textarea {
-  width: 100%; /* Full width */
-  padding: 12px; /* Some padding */
-  border: 1px solid #ccc; /* Gray border */
-  border-radius: 4px; /* Rounded borders */
-  box-sizing: border-box; /* Make sure that padding and width stays in place */
-  margin-top: 6px; /* Add a top margin */
-  margin-bottom: 16px; /* Bottom margin */
-  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+#nbcpic{
+  width: 100px;
+  height: 100px;
 }
-
-/* Style the submit button with a specific background color etc */
-input[type=submit] {
-  background-color: #BDCDD7;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-/* When moving the mouse over the submit button, add a darker green color */
-input[type=submit]:hover {
-  background-color: #BDCDD7;
-}
-
 /*Media Queries*/
-@media only screen and (min-width: 1000px) and (max-width: 1200px) {
- p {
-   font-size: 18px;
+@media only screen and (min-width: 1000px) and (max-width: 1600px) {
+ body {
+   font-size: 16px;
    color: #0C1824;
- }
- div {
-   width: 30%;
  }
 }
 @media only screen and (max-width: 450px) {
