--- a/html-frame/style.css
+++ b/html-frame/style.css
@@ -14,6 +14,9 @@
   text-transform: Helvetica, Arial, sans-serif;
   text-align: center;
 }
+#h1{
+  
+}
 p{
   font-size: 1em;
   font-family: Georgia, times, serif;
