--- a/data-viz-project/style.css
+++ b/data-viz-project/style.css
@@ -1,5 +1,6 @@
 #container{
-  width:1000px;
+  max-width:1000px;
+  width:90%;
   margin: 0 auto;
 }
 .headline{
@@ -40,7 +41,7 @@ p{
   margin: 0 auto;
 }
 .caption{
-  font-size: 1em;
+  font-size: .85em;
   font-family: 'PT Serif', serif;;
   text-align: center;
   font-style: italic;
@@ -56,5 +57,30 @@ footer{
   background-color: #D3D3D3;
 }
 .hero-image{
+  margin-top: 20px;
+  max-width: 500px;
+  width: 75%;
+}
+.icon{
+  height: 30px;
+  weight: 30px;
+  margin-top: 10px;
+  margin-right: 10px;
+}
+.ccbuilding{
+  margin: 0 auto;
+  max-width: 800px;
   width: 100%;
+}
+/*Media Queries*/
+@media only screen and (min-width: 1000px) and (max-width: 1600px) {
+ body {
+   font-size: 16px;
+   color: #0C1824;
+ }
+}
+@media only screen and (max-width: 450px) {
+ p {
+   font-size: 12px;
+ }
 }
