--- a/data-viz-project/style.css
+++ b/data-viz-project/style.css
@@ -46,6 +46,7 @@ p{
   text-align: center;
   font-style: italic;
   margin: 0 auto;
+  margin-bottom: 15px;
 }
 figure{
   text-align: center;
@@ -71,6 +72,10 @@ footer{
   margin: 0 auto;
   max-width: 800px;
   width: 100%;
+}
+.sparc-pic{
+  text-align: center;
+  margin: 0 auto;
 }
 /*Media Queries*/
 @media only screen and (min-width: 1000px) and (max-width: 1600px) {
