--- a/data-viz-project/style.css
+++ b/data-viz-project/style.css
@@ -77,6 +77,11 @@ footer{
   text-align: center;
   margin: 0 auto;
 }
+.pic2{
+  margin: 0 auto;
+  max-width: 1024px;
+  width: 100%;
+}
 /*Media Queries*/
 @media only screen and (min-width: 1000px) and (max-width: 1600px) {
  body {
